# system_id

./: 2024-12-21-00-45-43.bag  CMakeLists.txt  README.md  estimated_parameters.txt  output.csv  package.xml  pitch.bag  pitch2.bag  pitchdynamics.bag  pitchdynamics.ipynb  read_bag.py  roll.bag  roll2.bag  rolldynamics.bag  rolldynamics.ipynb  system.bag  system_id_pitch_chirp_wave_2025-02-07-21-09-17.bag  system_id_pitch_sin_wave.bag  system_id_roll_chirp_wave_2025-02-07-21-06-47.bag  system_id_roll_sin_wave.bag  system_id_sin_wave_2025-02-07-20-52-16.bag  systemid.bag  systemid.csv  systemid2.bag  sytemid2_2025-01-22-05-16-33.bag  sytemid2_2025-01-22-05-35-10.bag  sytemid2_2025-01-22-05-46-34.bag  sytemid2_2025-01-22-05-53-52.bag  sytemid3_2025-01-22-18-38-10.bag  sytemid3_2025-01-22-18-43-57.bag
devel/include/map_manager/: CheckPosCollisionRequest.h  CheckPosCollisionResponse.h  RayCastRequest.h  RayCastResponse.h
devel/include/tracking_controller/: Target.h
devel/lib/autonomous_flight/: dynamic_exploration_node  dynamic_inspection_node  dynamic_navigation_node  inspection_node  navigation_node  offboard_mode_node  takeoff_and_hover_node  takeoff_and_track_circle_node
devel/lib/global_planner/: rrt_interactive_node  rrt_star_interactive_node  test_dep_node
devel/lib/map_manager/: dynamic_map_node  esdf_map_node  occupancy_map_node  save_map_node
devel/lib/mav_control_interface/: mav_control_interface_test_node
devel/lib/mav_linear_mpc/: mav_linear_mpc_node
src/: readbag.ipynb  rosbag.bag  system_id_data.csv  system_id_node.cpp
(+84 files in other folders)
